[project]
name = "python-api"
version = "0.1.0"
description = "Example python api with uv as package manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "fastapi[standard]>=0.121.2",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
